# OHLCV-Trading-System

./: CMakeLists.txt  config.yaml  perf_report.json  run_trading_system.py
.github/workflows/: ci.yml
db/prometheus/: prometheus.yml
db/questdb/: schema.sql
docs/: ALPHA_VANTAGE_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTERN_DEMO.md  INTERVIEW_SUMMARY.md  README.md  TODO_ARCHITECTURE.md  architecture.md
src/engine/: alpha_vantage_pipeline_app.cpp
src/engine/ilp_writer/: CMakeLists.txt  ilp_types.h  ilp_writer.cpp  ilp_writer.h  main.cpp
src/engine/ingest/: CMakeLists.txt  alpha_vantage_client.cpp  alpha_vantage_client.h  main.cpp  market_data_ingest.h  tick_data.h
src/gui/: main.cpp  main_window.cpp  main_window.h  questdb_connector.cpp  questdb_connector.h
test_data/: sample_ticks.csv  synthetic_ticks.csv
